src/test/ui/attr-eq-token-tree.rs
#![feature(custom_attribute)]

#[my_attr = !] //~ ERROR unexpected token: `!`
fn main() {}
